--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -20,6 +20,13 @@ spec:
                 port:
                   number: 3000
           - pathType: Prefix
+            path: "/api/v1/questions"
+            backend:
+              service:
+                name: questions-srv
+                port:
+                  number: 3000
+          - pathType: Prefix
             path: "/"
             backend:
               service:
