--- a/infra/k8s/questions-depl.yaml
+++ b/infra/k8s/questions-depl.yaml
@@ -19,7 +19,7 @@ spec:
             - name: POSTGRES_HOST
               value: questions-postgres-srv
             - name: POSTGRES_DB
-              value: "question_service"
+              value: "questions_service"
             - name: POSTGRES_PASSWORD
               value: "12345678"
             - name: JWT_SECRET_KEY
