--- a/infra/k8s/questions-postgres.depl.yaml
+++ b/infra/k8s/questions-postgres.depl.yaml
@@ -17,7 +17,7 @@ spec:
           image: postgres
           env:
             - name: POSTGRES_DB
-              value: "question_service"
+              value: "questions_service"
             - name: POSTGRES_PASSWORD
               value: "12345678"
           resources:
