--- a/challenges/package.json
+++ b/challenges/package.json
@@ -21,9 +21,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "graphql": "^16.5.0",
+    "@nestjs/apollo": "^10.0.16",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.16",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.9.0",
     "@prisma/client": "4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
