--- a/infra/k8s/challenges.depl.yaml
+++ b/infra/k8s/challenges.depl.yaml
@@ -16,6 +16,8 @@ spec:
         - name: challenges
           image: ithkkeii/challenges
           env:
+            - name: DB_URL
+              value: postgresql://postgres:8p22LL2@4GmngBV@postgres-db:5432/challenges?schema=public
             - name: POSTGRES_HOST
               value: challenges-postgres-srv
             - name: POSTGRES_DB
