--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,21 +1,5 @@
-# dependencies
-/node_modules
+# OS
+.DS_Store
 
-# IDE
-/.idea
-/.awcache
-/.vscode
-
-# misc
-npm-debug.log
-
-# example
-/quick-start
-
-# tests
-/test
-/coverage
-/.nyc_output
-
-# dist
-/dist
+# Modules
+node_modules
