--- a/template/package.json
+++ b/template/package.json
@@ -1,60 +1,25 @@
 {
-  "name": "nest-typescript-starter",
-  "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
-  "license": "MIT",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "echo 'No e2e tests implemented yet.'"
-  },
-  "dependencies": {
-    "@graphql-tools/utils": "8.6.3",
-    "graphql": "^16.5.0",
-    "@nestjs/apollo": "^10.0.16",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/graphql": "^10.0.16",
-    "@nestjs/platform-express": "^8.0.0",
-    "apollo-server-express": "^3.9.0",
-    "apollo-server": "3.6.2",
-    "class-transformer": "0.4.0",
-    "class-validator": "0.13.2",
-    "graphql-subscriptions": "2.0.0",
-    "reflect-metadata": "0.1.13",
-    "rimraf": "3.0.2",
-    "rxjs": "7.4.0"
+    "start:dev": "ts-node-dev ./src/index.ts",
+    "codegen:gen": "graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
-    "@nestjs/cli": "8.1.5",
-    "@nestjs/schematics": "8.0.8",
-    "@nestjs/testing": "8.2.3",
-    "@types/express": "4.17.13",
-    "@types/node": "16.11.26",
-    "@types/supertest": "2.0.11",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.25.4",
-    "jest": "27.5.1",
-    "prettier": "2.5.1",
-    "supertest": "6.1.6",
-    "ts-jest": "27.0.7",
-    "ts-loader": "9.2.8",
-    "ts-morph": "12.2.0",
-    "ts-node": "10.4.0",
-    "tsconfig-paths": "3.11.0",
-    "typescript": "4.4.2"
+    "@graphql-codegen/cli": "2.8.0",
+    "@graphql-codegen/typescript": "2.7.1",
+    "@graphql-codegen/typescript-resolvers": "2.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": ">=5.16.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
+    "prisma": "^4.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@prisma/client": "4.0.0",
+    "apollo-server": "^3.9.0",
+    "graphql": "^16.5.0"
   }
 }
