feat: change setup detail

--- a/infra/k8s/challenges.depl.yaml
+++ b/infra/k8s/challenges.depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: challenges
-          image: ithkkeii/challenges
+          image: keicorp/challenges
           resources:
             limits:
               memory: "512Mi"
