--- a/template/.env
+++ b/template/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:8p22LL2@4GmngBV@db.glgidvxsxnnezynuzrdn.supabase.co:5432/challenges?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/postgres?schema=public"
