--- a/template/package.json
+++ b/template/package.json
@@ -1,25 +1,26 @@
 {
+  "name": "template",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start:dev": "ts-node-dev ./src/index.ts",
-    "codegen:gen": "graphql-codegen --config codegen.yml"
+    "dev": "nodemon src/index.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@graphql-codegen/cli": "2.8.0",
-    "@graphql-codegen/typescript": "2.7.1",
-    "@graphql-codegen/typescript-resolvers": "2.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": ">=5.16.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@swc/core": "^1.2.218",
+    "@types/node": "^18.0.6",
+    "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "prisma": "^4.0.0",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@prisma/client": "4.0.0",
-    "apollo-server": "^3.9.0",
+    "apollo-server": "^3.10.0",
     "graphql": "^16.5.0"
   }
 }
