--- a/template/package.json
+++ b/template/package.json
@@ -9,18 +9,23 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "4.0.0",
+    "apollo-server-core": "^3.10.0",
+    "apollo-server-express": "^3.10.0",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.1",
+    "graphql": "^16.5.0"
+  },
   "devDependencies": {
     "@swc/core": "^1.2.218",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "prisma": "^4.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "@prisma/client": "4.0.0",
-    "apollo-server": "^3.10.0",
-    "graphql": "^16.5.0"
   }
 }
