--- a/template/package.json
+++ b/template/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "keywords": [],
   "author": "",
@@ -15,17 +16,27 @@
     "apollo-server-express": "^3.10.0",
     "cookie-session": "^2.0.0",
     "express": "^4.18.1",
-    "graphql": "^16.5.0"
+    "graphql": "^16.5.0",
+    "zod": "^3.17.9"
   },
   "devDependencies": {
-    "@swc/core": "^1.2.218",
+    "@graphql-codegen/cli": "2.9.1",
+    "@graphql-codegen/typescript": "2.7.2",
+    "@graphql-codegen/typescript-resolvers": "2.7.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
-    "nodemon": "^2.0.19",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.0.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.7.1",
     "prisma": "^4.0.0",
-    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
 }
