--- a/template/codegen.yml
+++ b/template/codegen.yml
@@ -4,5 +4,8 @@ documents: null
 generates:
   src/generated/graphql.ts:
     plugins:
-      - "typescript"
-      - "typescript-resolvers"
+      - 'typescript'
+      - 'typescript-resolvers'
+    config:
+      enumValues:
+        Level: ../types#Level
