--- a/template/package.json
+++ b/template/package.json
@@ -17,6 +17,7 @@
     "cookie-session": "^2.0.0",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "kafkajs": "^2.1.0",
     "zod": "^3.17.9"
   },
   "devDependencies": {
