--- a/javascript-executor/package.json
+++ b/javascript-executor/package.json
@@ -13,13 +13,12 @@
   "devDependencies": {
     "@types/dockerode": "^3.3.9",
     "@types/express": "^4.17.13",
-    "@types/workerpool": "^6.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "dockerode": "^3.3.2",
     "express": "^4.18.1",
-    "workerpool": "^6.2.1"
+    "kafkajs": "^2.1.0"
   }
 }
