feat: getChallenges & getChallenge Query

--- a/challenges/.env
+++ b/challenges/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:8p22LL2@4GmngBV@db.rjfcjubkcfzjgxojzfae.supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres:RBGNEXFRRow9nMVb@db.gpyrfsohutcdmwczqamo.supabase.co:5432/postgres"
