--- a/challenges/package.json
+++ b/challenges/package.json
@@ -27,6 +27,8 @@
     "@nestjs/graphql": "^10.0.18",
     "@nestjs/microservices": "^9.0.7",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^9.0.8",
+    "@nestjs/websockets": "^9.0.8",
     "@prisma/client": "4.0.0",
     "apollo-server-core": "^3.9.0",
     "apollo-server-express": "^3.9.0",
@@ -34,7 +36,8 @@
     "kafkajs": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
