--- a/javascript-executor/package.json
+++ b/javascript-executor/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dockerode": "^3.3.2",
     "express": "^4.18.1",
-    "kafkajs": "^2.1.0"
+    "kafkajs": "^2.1.0",
+    "nanoid": "^3.0.0"
   }
 }
