--- a/images/javascript/package.json
+++ b/images/javascript/package.json
@@ -5,6 +5,7 @@
   "main": "src/runner.js",
   "scripts": {
     "dev": "tsc --build && node dist/main.js",
+    "build": "tsc --build",
     "start": "rm -rf ./dist && tsc --build && node dist/runner.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
