--- a/images/javascript/package.json
+++ b/images/javascript/package.json
@@ -10,11 +10,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "chai": "^4.3.6",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/node": "^18.6.4",
     "ts-node-dev": "^2.0.0",
+    "@types/chai": "^4.3.3",
     "typescript": "^4.7.4"
   },
   "keywords": [],
