--- a/javascript-executor/package.json
+++ b/javascript-executor/package.json
@@ -1,6 +1,7 @@
 {
   "name": "javascript-executor",
   "version": "1.0.0",
+  "type": "commonjs",
   "description": "",
   "main": "index.js",
   "scripts": {
