--- a/javascript-executor/package.json
+++ b/javascript-executor/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.3",
     "@types/dockerode": "^3.3.9",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -24,6 +25,7 @@
     "typescript": "*"
   },
   "dependencies": {
+    "chai": "^4.3.6",
     "dockerode": "^3.3.2",
     "express": "^4.18.1",
     "kafkajs": "^2.1.0",
