feat: change provider

--- a/challenges/.env
+++ b/challenges/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:RBGNEXFRRow9nMVb@db.gpyrfsohutcdmwczqamo.supabase.co:5432/postgres"
+# DATABASE_URL='mysql://yaiu1acxvk9xtphgc7mx:pscale_pw_Rh06ACj24aU69wJeov5iCTX1Gvls0fC6b0ZwrUlbdcL@ap-southeast.connect.psdb.cloud/challenges-service?sslaccept=strict'
+DATABASE_URL='mysql://2cii0fz4sse59nzv784p:pscale_pw_yWHIuDoBXOBCLwrEnHpyx5qH5ZDH5ARbB6UznkhAoxI@ap-southeast.connect.psdb.cloud/challenges-service?sslaccept=strict'
+# DATABASE_URL='mysql://127.0.0.1:3309/challenges-service'
