--- a/challenges/package.json
+++ b/challenges/package.json
@@ -29,7 +29,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^9.0.8",
     "@nestjs/websockets": "^9.0.8",
-    "@prisma/client": "4.0.0",
+    "@prisma/client": "^4.3.1",
     "apollo-server-core": "^3.9.0",
     "apollo-server-express": "^3.9.0",
     "graphql": "^16.5.0",
@@ -54,7 +54,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.0.3",
     "prettier": "^2.3.2",
-    "prisma": "^4.0.0",
+    "prisma": "^4.3.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
