--- a/javascript-interpret/package.json
+++ b/javascript-interpret/package.json
@@ -14,6 +14,7 @@
     "chai": "^4.3.6"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.3"
+    "@types/chai": "^4.3.3",
+    "@types/node": "^18.7.18"
   }
 }
